[tool.poetry]
name = "aiida-changelog"
version = "0.1.0"
description = ""
authors = ["SoftRobot"]
readme = "README.md"
packages = [{include = "aiida_changelog"}]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.9"
mkdocs-material-extensions = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

